@@ -198,9 +198,12 @@
   This commit adds a simple forward declaration to the relevant files, based on the
   configured icon. If the icon does not exist, linker will give an error about it.
   Contributed by Petteri Aimonen.
-* NxWidgets/nxwm/src/ctaskbar.cxx: Highlight the current window in the task bar.
+* NxWidgets::CTaskBar: Highlight the current window in the task bar.
   Contributed by Petteri Aimonen.
 * NxWidgets/libnxwidgets/src/glyph_cycle.cxx:  Width of glyph_cycle was wrong;
-  Desctructor needs to by public.  From Petteri Aimonen.
-* CNumericEdit.  This is basically a label with plus and minus buttons.
+  Destructor needs to by public.  From Petteri Aimonen.
+* NxWidgets::CNumericEdit.  This is basically a label with plus and minus buttons.
   Contributed by Petteri, Aimonen.
+* NxWM::CStartWindow:  Fix mq_receive error handling with signal is recieved.
+  From Petteri Aimonen.
+
